# SmartRecord

./: ADMOB_INTEGRATION.md  FEATURES_STATUS.md  FINAL_WHISPER_SUMMARY.md  FOREGROUND_SERVICE_STATUS.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  MODEL_DOWNLOAD_UPDATE.md  NOTIFICATION_LOCKSCREEN_UI_DESIGN.md  NOTIFICATION_NAVIGATION_PLAN.md  NOTIFICATION_PLAN.md  NUMBER_BASED_SPEAKER_SEGMENTATION_PLAN.md  Nofication_.md  Nofication_standar.md  Onboarding.md  PLAYER_UI_APPLICATION_ANALYSIS.md  PLAYER_UI_DESIGN.md  QUICK_FIX_BUILD.md  RECORDING_FIX_PLAN.md  RECORDING_ISSUES_ANALYSIS.md  REPOSITORY_PATTERN_MIGRATION_PLAN.md  TEMPLATE_GUIDE.md  TESTING_CHECKLIST.md  TEST_NOTIFICATION_NAVIGATION.md  WHISPER_IMPLEMENTATION_CHECKLIST.md  WHISPER_IMPLEMENTATION_COMPLETE.md  architure.md  build.gradle.kts  demo.md  git_command.md  googleASR.md  gradle.properties  logtest.md  logtest.txt  problem_and_solve.md  settings.gradle.kts  test_output.txt  teststatus.md  todolist.md  whisper.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/java/com/yourname/smartrecorder/: MainActivity.kt  SmartRecorderApplication.kt
app/src/main/java/com/yourname/smartrecorder/di/: AppModule.kt
app/src/main/java/com/yourname/smartrecorder/ui/: SmartRecorderApp.kt
app/src/main/java/com/yourname/smartrecorder/ui/theme/: Color.kt  (+2 more)
app/src/main/res/drawable/: ic_notification_pause.xml  ic_notification_play.xml  ic_notification_stop.xml
app/src/main/res/layout/: notification_recording.xml  notification_recording_collapsed.xml  notification_recording_expanded.xml
app/src/main/res/values/: strings.xml  themes.xml
docs/: ui-flow-complete.md  ui-flow.md  wireframes.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+137 files in other folders)
